--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">myCodePushTest</string>
+    <string name="reactNativeCodePush_androidDeploymentKey">1yxL2r9xmsbj8NESvoZuj1EGSVAic_GwyPdyc</string>
 </resources>
